@startuml
'https://plantuml.com/class-diagram

title Diagrama de Paquetes
package Controlador{
allowmixing
    class ControladorIniciarJuego{}
    class ControladorGenerarPartida{}
    class ControladorDeFinalizarJuego{}
    class ControladorLimitePreguntas{}

}
package Modelo {
        package Excepciones
        package Lector
        package Limite
        package Modificador
        package Partida
        package Pregunta
        package Respuesta
}
package Vista{
    package botones
    package mensajes
    package utils
    package vistas
}

Vista --> Modelo
Controlador -->Vista
Controlador --> Modelo
@enduml
@startuml
'https://plantuml.com/class-diagram

title Diagrama de Paquetes

package Modelo {
        package Excepciones
        package Lector
        package Limite
        package Modificador
        package Partida
        package Pregunta
        package Respuesta
}
package Vista{
    package botones
    package mensajes
    package utils
    package vistas
}

Vista --> Modelo
Controlador -->Vista
Controlador --> Modelo
@enduml